fix logo not showing on firefox with small width

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -21,7 +21,6 @@
         background: transparent !important;
 
         @media screen and (max-width: 550px) {
-            height: auto;
             padding-bottom: 15.11%;
             width: 100%;
         }
